0.20.6
	bugfix: "sshnokey" gateway had a bug
	bugfix: SLB config was generated incrorrectly when multiple 
		rspools were linked with the same balancer-vsg pair
	update: support of Huawei CE5800 series switch
	update: port type could now be changed even if port is linked
0.20.5 2013-06-23
	bugfix: 500 server error if protocol was not specified in
		terminal_settings subroutine
	bugfix: Virtual Resources page threw exception if a hypervisor/resource pool
		was not associated with a cluster (#823)
	bugfix: contained objects were displayed without container's rackspace
		allocation information (#825)
	bugfix: when mounting an object, list of racks was improperly grouped if
		duplicate row names existed (#839)
	bugfix: invalid search result when only one location matched (#843)
	bugfix: when there's no local account created while using LDAP auth,
		quick links can't be saved on that account (#831)
	bugfix: ip tree: "Routed by" column displays routers in aggregate networks (#773)
	bugfix: UCS gateway was broken since 0.20.4
	bugfix: user-overrided config values were displayed in global config editor form
	bugfix: API: built-in hook functions were not called in 'before' and 'after' modes
	bugfix: Linux host's port status fetching was broken (#903)
	update: search improvements:
		- redirect to object when search by IP lead to valid allocation
		- if search result is same type of object, preserve opened tab
		- display search query in form field when search return multiple results
		- search for rack rows by name (#885)
	update: handle EntityNotFoundException as redirect to main page and
		show appropriate error message
	update: prevent deletion of system-level attribute mappings (#771)
	update: prevent deletion of object container compatibility rules
		which are being used (#835)
	update: use the monospace font family when displaying comments (#781)
	update: display parent locations when browsing rackspace (#845)